--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,9 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>clinic.programmming</groupId>
   <artifactId>maven-quick-start</artifactId>
-  <version>1.0</version>
+  <version>3.8.0</version>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>	  
 </project>
